# WaterTown

./: .gitignore  CMakeLists.txt  vcpkg.json
.obsidian/: workspace.json
WaterTown/: .gitignore  vcpkg.json
WaterTown-main/: .gitattributes  CMakeLists.txt  README.md  imgui.ini  一个很粗糙的第二阶段の实现总结.md
WaterTown-main/assets/shaders/: basic.vert  water.frag
WaterTown-main/src/: main.cpp
WaterTown-main/src/Core/: Window.cpp
WaterTown-main/src/Editor/: EditorUI.h  SceneEditor.cpp  SceneEditor.h
WaterTown-main/src/Physics/: Boat.h
WaterTown-main/src/Render/: BoatRenderer.cpp  BoatRenderer.h  Camera.cpp  FollowCamera.cpp  FollowCamera.h  ObjectRenderer.h  TerrainRenderer.h
WaterTown-main/src/Water/: WaterSurface.cpp  WaterSurface.h
WaterTown/assets/shaders/: fog.vert  sky.frag  sky.vert
WaterTown/src/Core/: Window.h
WaterTown/src/Editor/: EditorUI.h  TerrainRenderer.h
WaterTown/src/Physics/: Boat.h
WaterTown/src/Render/: BoatRenderer.h  FollowCamera.cpp  GeometryGenerator.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h
WaterTown/src/Water/: BoatWake.cpp
assets/shaders/: basic.frag  basic.vert  clouds.vert  water.frag  water.vert
graphsis/WaterTown/: imgui.ini
graphsis/WaterTown/src/: main.cpp
graphsis/WaterTown/src/Core/: Application.cpp  Window.cpp
graphsis/WaterTown/src/Editor/: EditorUI.cpp  SceneEditor.h
graphsis/WaterTown/src/Render/: Camera.h  FollowCamera.h  ObjectRenderer.cpp  ObjectRenderer.h  OrbitCamera.cpp  OrbitCamera.h  OrthographicCamera.cpp  OrthographicCamera.h
graphsis/WaterTown/src/Water/: BoatWake.h
src/: main.cpp
src/Core/: Application.h
src/Editor/: EditorUI.cpp  SceneEditor.cpp
src/Physics/: Boat.cpp
src/Render/: BoatRenderer.cpp  ObjectRenderer.cpp  OrbitCamera.cpp  OrbitCamera.h  TerrainRenderer.cpp  TerrainRenderer.h
src/Water/: WaterSurface.cpp  WaterSurface.h
